--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+}
+
+
+
 a {
     color: black;
     text-decoration: none;
@@ -17,8 +23,8 @@ a:hover {
 }
 #my-navbar {
     margin-top: 40px;
-    /* border: solid 5px green; */
-   max-width: 980px;
+    border: solid 5px green;
+    max-width: 980px;
     margin-top: 20px;
     margin-right: auto;
     margin-left: auto;
@@ -28,15 +34,25 @@ a:hover {
 #my-name {
     font-family: 'Staatliches', cursive;
     font-size: 60px;
-    /* border: solid 1px red; */
+    border: solid 1px red;
     /* display: inline-block; */
 }
 #my-links {
     /* display: inline-block; */
     font-family: 'Open Sans', sans-serif;
     font-size: 30px;
-    /* border: solid 1px blue; */
+    border: solid 1px blue;
     /* padding-bottom: 20px; */
     padding-top: 20px;
     
 }
+
+@media screen and (max-width: 980px) {
+    #my-navbar {
+    
+        width: 80%
+
+    }
+
+}
+
