--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -18,19 +18,19 @@ a:hover {
     color: #FFDEED
 }
 .fab:hover{
-    color: black;
+    color:black;
 }
 .pink-button {
     text-transform: uppercase;
     font-family: 'Open Sans', sans-serif;
     background-color: #FFDEED;
     border:  #FFDEED;
-    color: white;
+    color:black;
     width: 120px;
 
 }
 .pink-button:hover{
-    color: black;
+    color:white;
 }
 
 #top-accent {
@@ -66,7 +66,55 @@ a:hover {
     padding-top: 20px;
     
 }
+#mobile-links {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 30px;
+    padding-top: 20px;
+    /* display: none; */
+  
+}
 
+.dropbtn {
+    background-color: #FFDEED;
+    width: 40px;
+    height: 40px;
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: white;
+    color: black;
+  }
 /* Media Queries */
 
 @media screen and (max-width: 1200px) {
@@ -91,3 +139,8 @@ a:hover {
     
 }
 
+@media screen and (max-width: 440px) {
+    #my-links {
+        display: none;
+    }
+}
