--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -57,6 +57,9 @@ a:hover {
     /* border: solid 1px red; */
     /* display: inline-block; */
 }
+#my-name:hover {
+    color: #FFDEED;
+}
 #my-links {
     /* display: inline-block; */
     font-family: 'Open Sans', sans-serif;
@@ -66,61 +69,65 @@ a:hover {
     padding-top: 20px;
     
 }
+
 #mobile-links {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 30px;
-    padding-top: 20px;
-    /* display: none; */
-  
+    visibility: hidden;
 }
 
 .dropbtn {
     background-color: #FFDEED;
-    width: 40px;
-    height: 40px;
     color: white;
     font-size: 16px;
     border: none;
     cursor: pointer;
-  }
+    height: 40px;
+}
   
-  .dropdown {
+.dropdown {
     position: relative;
     display: inline-block;
-  }
+    
+}
   
-  .dropdown-content {
+.dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
+    background-color: white;
+    width: 100%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-  }
+    text-align: center;
+}
   
-  .dropdown-content a {
+.dropdown-content a {
     color: black;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
+}
   
-  .dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+      background-color:#FFDEED;
+      font-size: 20px;
+}
   
-  .dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content {
     display: block;
-  }
+}
   
-  .dropdown:hover .dropbtn {
-    background-color: white;
-    color: black;
-  }
+.dropdown:hover .dropbtn {
+    background-color: #FFDEED;
+}
+
 /* Media Queries */
 
 @media screen and (max-width: 1200px) {
     #my-navbar {
         width: 80%
     }
+   
 }
 
 @media screen and (max-width: 980px) {
@@ -136,11 +143,29 @@ a:hover {
        padding-top:10px;
        padding-bottom:10px;
     }
-    
-}
+   
 
 @media screen and (max-width: 440px) {
     #my-links {
         display: none;
     }
+
+    #mobile-links {
+        visibility: visible;
+    }
+    .dropdown {
+        margin: auto;
+       display:block;
+    }
+    .dropbtn {
+        width: 100%;
+        margin: auto;
+    }
+    
+}
+@media screen and (max-width: 320px) {
+   #my-name {
+       font-size: 48px;
+   }
+    
 }
