--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -105,7 +105,9 @@ a:hover {
     font-size: 18px;
     padding: 12px 16px;
     text-decoration: none;
+    text-transform: uppercase;
     display: block;
+    
 }
   
 .dropdown-content a:hover {
