--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,7 +3,6 @@
 }
 
 
-
 a{
     color: black;
     text-decoration: none;
@@ -48,8 +47,10 @@ a:hover {
     margin-top: 20px;
     margin-right: auto;
     margin-left: auto;
-    display: flex;
-    justify-content: space-between;
+    /* display: flex;
+    justify-content: space-between; */
+    display: block;
+    text-align: center;
 }
 #my-name {
     font-family: 'Staatliches', cursive;
@@ -127,31 +128,33 @@ a:hover {
 
 @media screen and (max-width: 1200px) {
     #my-navbar {
-        width: 80%
+        width: 80%;
+        margin: auto;
+        text-align: center;
     }
    
 }
 
-@media screen and (max-width: 980px) {
-    #my-navbar{
+/* @media screen and (max-width: 980px) { */
+    /* #my-navbar{
         display: block;
-    }
+    } */
     
-    #my-name,#my-links {
+    /* #my-name,#my-links { */
         /* display: block; */
-        text-align: center;
-    }
-    #my-links {
+        /* text-align: center;
+    } */
+    /* #my-links {
        padding-top:10px;
        padding-bottom:10px;
     }
    
+} */
 
 @media screen and (max-width: 440px) {
     #my-links {
         display: none;
     }
-
     #mobile-links {
         visibility: visible;
     }
