--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -56,6 +56,9 @@ a:hover {
     width: 100%;
     height:40px;
     background-color: #FFDEED;
+    text-align: center;
+    font-size: 12px;
+    padding-top: 10px;
 }
 
 
@@ -142,7 +145,7 @@ a:hover {
     background-color: #FFDEED;
 }
 
-.content-box, #trigger-container {
+.content-box, #trigger-container, .card-box {
     max-width: 980px;
     margin: auto;
     display: flex;
@@ -155,15 +158,54 @@ a:hover {
 .content-box{
     height: 300px;
 }
-.thumb {
+
+/* .card-box {
+    height:
+} */
+
+/* .thumb {
     border: solid 3px green;
 }
 .info {
     border: solid 3px purple;
+} */
+/* #card-box{
+    height: 250px;
+} */
+
+.thumb-holder {
+  
 }
-#card-box{
-    height: 200px;
+.project-thumb {
+    width: 250px;
+    border-radius: 50%
 }
+.project-thumb:hover {
+    border-radius: 0%
+}
+
+.project-card {
+    height: 250px;
+  
+   
+}
+card-header {
+    border-radius: 0%;
+}
+.project-title {
+    background-color: #FFDEED;
+    border-radius: 0%;
+
+}
+.git-line {
+    text-align: center;
+}
+.git-link {
+    width: 160px;
+
+}
+
+
 #trigger-container {
     height: 60px;
 }
@@ -218,10 +260,13 @@ a:hover {
     }
 
     #pic-holder,
-    #bio-text {
+    #bio-text,{
         width: 100%;
     }
-
+    .thumb-holder {
+        text-align: center;
+        width: 100%;
+    }
     #my-navbar {
         width: 80%;
         margin-right: auto;
@@ -249,8 +294,18 @@ a:hover {
     #trigger-container {
         display: none;
     }
+    
 }
+@media screen and (max-width: 760px) {
+    /* .thumb-holder {
+        width: 100%;
+    } */
+    .project-thumb {
+        width: 150px;
+        border-radius: 50%
+    }
 
+}
 @media screen and (max-width: 440px) {
     /* #my-navbar {
         width: 80%;
@@ -288,6 +343,10 @@ a:hover {
         font-size: 14px;
         line-height: 20px;
     }
+    /* .project-thumb {
+        width: 100px;
+        border-radius: 50%
+    } */
 }
 
 @media screen and (max-width: 320px) {
