--- a/assets/style/copy.css
+++ b/assets/style/copy.css
@@ -31,7 +31,7 @@ a:hover {
 
 .pink-button {
     text-transform: uppercase;
-    font-family: 'Open Sans', sans-serif;
+    /* font-family: 'Open Sans', sans-serif; */
     background-color: #FFDEED;
     border: #FFDEED;
     color: black;
@@ -39,8 +39,22 @@ a:hover {
 
 
 }
+.git-line {
+    text-align: center;
+}
+.git-link {
+    text-transform: uppercase;
+    /* font-family: 'Open Sans', sans-serif; */
+    background-color: #FFDEED;
+    border: #FFDEED;
+    color: black;
+    width: 160px;
+}
 
 .pink-button:hover {
+    color: white;
+}
+.git-link:hover{
     color: white;
 }
 
@@ -89,7 +103,7 @@ a:hover {
 }
 
 #my-links {
-    font-family: 'Open Sans', sans-serif;
+    /* font-family: 'Open Sans', sans-serif; */
     font-size: 30px;
 }
 
@@ -124,7 +138,7 @@ a:hover {
 
 .dropdown-content a {
     color: black;
-    font-family: 'Open Sans', sans-serif;
+    /* font-family: 'Open Sans', sans-serif; */
     font-size: 18px;
     padding: 12px 16px;
     text-decoration: none;
@@ -164,25 +178,36 @@ a:hover {
 .info {
     border: solid 3px purple;
 } */
+
+.project-card {
+    display: inline-block;
+    width: 500px;
+    margin-left: 100px;
+    height: 280px;
+    border: none;
+}
 .project-thumb {
     display: inline-block;
     width: 250px;
     border-radius: 50%
 }
-.proj-info {
+/* .proj-info {
     display: inline-block;
     border: solid 1px hotpink;
-}
+} */
 .project-title {
-   
+   background-color: #FFDEED;
     text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+   
 }
 .project-thumb:hover {
     border-radius: 0%
 }
 #card-box{
-    height: 350px;
-    padding-top: 40px;
+    height: 300px;
+    display: flex;
    
 }
 #trigger-container {
@@ -218,7 +243,7 @@ a:hover {
     text-justify: inter-word;
     text-size-adjust: auto;
     text-indent: 2rem;
-    font-family: 'Open Sans', sans-serif;
+    /* font-family: 'Open Sans', sans-serif; */
     font-size: 18px;
     line-height: 32px;
 }
@@ -273,10 +298,19 @@ a:hover {
     #trigger-container {
         display: none;
     }
-   
-    .project-thumb {
-        margin-left: 20px;
+    #card-box{
+        padding-top: 0px;
+       
     }
+    .project-thumb {
+        /* margin-left: 20px; */
+        /* display: inline-block; */
+
+    }
+    /* .project-card {
+        display: inline-block;
+        width: 400px;
+    } */
 
 }
 @media screen and (max-width: 720px) {
